	- API: Added is_identified
	- API: Added serv_enforce
	- Modules: Added nickserv/identify and nickserv/info
	- API: added metadata
	- API: added event_identify and event_register
	- XMLRPC: Scrapped XMLRPC, most likely permanently, due to it not working nor will we ever be able to create it at this time.
	- Core: we now need Email::Valid for Chakora
	- Modules: nickserv/register now checks for a valid email address
	- Modules: added nickserv/logout
	- API: added event_logout
	- Modules: use event_identify and event_register in their modules
	- Modules: added nickserv/set
	- Config: Added register, identify, info, logout, and set nickserv modules to default autoload, along with the config options to go with them
	- API: Renamed event_register to event_ns_register
	- API: Added event_cs_register
	- Protocols: Fixed bugs and added isonchan() for checking whether a user is on a channel or not.
	- Core: Check for m_muteban in InspIRCd
	- Modules: nickserv/info - Added "<nick> is a Services Operator." if they are identified to an account with soper privs
	- Chakora: Use POSIX::RT::Timer.
	- API: Added flaglist_add flaglist_del and flag_exists
	- Chakora: Added chanserv/register and full status sync subs, channel and user member of channel trackers and bug fixes.
	- API: Added event_kick and event_topic
	- Protocols: Track KICK and TOPIC
	- API: Added create_core_flags
	- Modules: added chanserv/info and chanserv/flist
	- Modules: (chanserv|nickserv|operserv)/help: Improved how help is displayed.
	- API: Added is_tainted
	- Modules: Made ChanServ modular with chanserv/main. All ChanServ modules will load this if it's not loaded as it is dependent on ChanServ.
          You should add chanserv/main to autoload before any ChanServ modules regardless.
	- Chakora: updateTS is now a config option. WE HIGHLY ENCOURAGE ENABLING IT.
	- API: added has_flag
	- Modules: Added chanserv/sync
	- API: added ison